--- a/index.html
+++ b/index.html
@@ -82,6 +82,28 @@
         </section>
     </header>
 
+    <main>
+        <section class="perfil">
+
+            <div class="circle circle-top"></div>
+            <div class="circle circle-bottom"></div>
+            
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 fot">
+                        <img src="" alt="Persona" class="foto" width="60%">
+                        <div class="imagen"></div>
+                    </div>
+                    <div class="col-md-6 datos">
+                        <h2>Perfil Profesional</h2>
+                        <p>Soy estudiante de Análisis y Desarrollo de Software, con interés en el desarrollo web y móvil, bases de datos y análisis de requerimientos. Me destaco por ser proactiva, responsable y tener facilidad para trabajar en equipo. Busco oportunidades para aplicar mis conocimientos en proyectos reales, seguir aprendiendo y crecer profesionalmente en el mundo tecnológico.</p>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+    </main>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
