--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
                         <div class="buttons">
                             <a href="#habilidades">Habilidades</a>
-                            <a href="#">Portafolio</a>
+                            <a href="#portafolio">Portafolio</a>
                         </div>
                     </div>
 
@@ -109,7 +109,7 @@
                 <div class="row" id="contenedor-tarjetas">
 
                     <h1>Habilidades</h1>
-              
+
                     <div class="col-md-6 tarjeta">
                         <div class="cont">
                             <div class="icon-box">
@@ -182,7 +182,8 @@
                                 <img id="icono" src="img/bootstrap.png" alt="bootstrap" width="42">
                             </div>
                             <h3>Bootstrap</h3>
-                            <p>Bootstrap es un framework CSS y JavaScript que facilita crear páginas web responsivas y modernas.
+                            <p>Bootstrap es un framework CSS y JavaScript que facilita crear páginas web responsivas y
+                                modernas.
 
                         </div>
                     </div>
@@ -191,6 +192,54 @@
                 </div>
             </div>
         </section>
+
+        <section id="portafolio">
+            <div class="circle circle-top"></div>
+            <div class="circle circle-bottom"></div>
+
+            <div class="container text-center">
+                <h1>Habilidades</h1>
+
+                <div id="carousel-portafolio" class="carousel slide">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <a href="https://juana0504.github.io/Paractica_Bootstrap_2/">
+                                <img src="img/Carrusel 1.png" class="d-block mx-auto w-50" alt="Proyecto 1">
+                            </a>
+                        </div>
+
+                        <div class="carousel-item">
+                            <a href="https://juana0504.github.io/rumbo-practica-html-css/">
+                                <img src="img/Carrusel 2.png" class="d-block mx-auto w-50" alt="Proyecto 2">
+                            </a>
+                        </div>
+                        <div class="carousel-item active">
+                            <a href="https://juana0504.github.io/base_figura_DOM/">
+                                <img src="img/Carrusel 3.png" class="d-block mx-auto w-50" alt="Proyecto 1">
+                            </a>
+                        </div>
+
+                        <div class="carousel-item">
+                            <a href="https://juana0504.github.io/base-vehiculos-dinamicos/">
+                                <img src="img/Carrusel 4.png" class="d-block mx-auto w-50" alt="Proyecto 2">
+                            </a>
+                        </div>
+                    </div>
+
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carousel-portafolio"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carousel-portafolio"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
