Realice la sección de estudios mas los estilos

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             <div class="circle circle-bottom"></div>
 
             <div class="container text-center">
-                <h1>Habilidades</h1>
+                <h1>Portafolio</h1>
 
                 <div id="carousel-portafolio" class="carousel slide">
                     <div class="carousel-inner">
@@ -213,7 +213,7 @@
                                 <img src="img/Carrusel 2.png" class="d-block mx-auto w-50" alt="Proyecto 2">
                             </a>
                         </div>
-                        <div class="carousel-item active">
+                        <div class="carousel-item">
                             <a href="https://juana0504.github.io/base_figura_DOM/">
                                 <img src="img/Carrusel 3.png" class="d-block mx-auto w-50" alt="Proyecto 1">
                             </a>
@@ -236,6 +236,41 @@
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="visually-hidden">Next</span>
                     </button>
+                </div>
+            </div>
+        </section>
+
+        <section id="estudios">
+
+            <div class="circle circle-top"></div>
+            <div class="circle circle-bottom"></div>
+
+            <div class="container">
+                <h1>Estudios</h1>
+                <div class="row">
+                    <h2>Certificaciones</h2>
+                    <div class="col-md-6">
+                        <h3>Soporte TI</h3>
+                        <p>
+                            Es una certificación esencial para quienes inician su carrera en tecnologías de la
+                            información. Avala conocimientos prácticos en instalación, configuración y mantenimiento de
+                            computadoras, redes básicas, dispositivos móviles y seguridad.
+                            Esta certificación demuestra que el profesional está capacitado para resolver problemas
+                            técnicos comunes y brindar soporte a usuarios finales, lo cual es clave en roles de mesa de
+                            ayuda, soporte técnico o asistencia en sistemas.
+                        </p>
+                    </div>
+                    <div class="col-md-6">
+                        <h3>Fundamentos profecionales en Análisis y Desarrollo de Software</h3>
+                        <p>Esta certificación valida competencias en el desarrollo de aplicaciones usando la nube de
+                            Microsoft Azure. Existen niveles como Azure Fundamentals para comprender los conceptos
+                            básicos, y Azure Developer Associate para demostrar habilidades en la creación, despliegue y
+                            mantenimiento de soluciones en la nube.
+                            Es ideal para analistas, desarrolladores y programadores que trabajan con tecnologías
+                            modernas, ya que demuestra dominio en entornos reales de desarrollo en la nube, lo cual es
+                            muy valorado en el sector empresarial actual.
+                        </p>
+                    </div>
                 </div>
             </div>
         </section>
