Realice la sección de experiencia mas los estilos

--- a/index.html
+++ b/index.html
@@ -275,6 +275,46 @@
             </div>
         </section>
 
+        <section id="experiencia">
+            <div class="circle circle-top"></div>
+            <div class="circle circle-bottom"></div>
+
+            <div class="container">
+                <h1>Experiencia</h1>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="dato">
+                            <p>Desarrollo de Aplicación “Mi Agenda Escolar”
+                            Rol: Programadora Fullstack | Tecnologías: Java, SQLite, Android Studio
+                            Descripción: Creación de una app móvil para registrar tareas, fechas de exámenes y
+                            recordatorios. Implementé la interfaz y la lógica de almacenamiento local.
+                        </p>
+                        <p>Sistema Web de Gestión de Inventario
+                            Rol: Backend Developer | Tecnologías: PHP, MySQL
+                            Descripción: Proyecto académico que permite registrar productos, controlar stock y generar
+                            reportes. Implementé las funciones CRUD y la conexión a base de datos.
+                        </p>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="dato">
+                            <p>Proyecto académico: Sistema de reservas para eventos
+                            Rol: Desarrolladora Backend | Tecnologías: PHP, MySQL
+                            Descripción: Implementé funcionalidades para la gestión de reservas, validación de datos y
+                            conexión con base de datos.
+                        </p>
+                        <p>
+                            Diseño de Prototipos para App de Turismo “Aventura Go”
+                            Rol: Diseñadora UX/UI | Herramientas: Figma, Canva
+                            Descripción: Desarrollo de prototipos de baja y alta fidelidad para una aplicación de
+                            reservas turísticas. Aplicación de principios de diseño centrado en el usuario
+                        </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
