Realice la sección de Hobbies y Redes sociales mas los estilos

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
     </header>
 
     <main>
+
         <section id="perfil">
 
             <div class="circle circle-top"></div>
@@ -285,30 +286,66 @@
                     <div class="col-md-6">
                         <div class="dato">
                             <p>Desarrollo de Aplicación “Mi Agenda Escolar”
-                            Rol: Programadora Fullstack | Tecnologías: Java, SQLite, Android Studio
-                            Descripción: Creación de una app móvil para registrar tareas, fechas de exámenes y
-                            recordatorios. Implementé la interfaz y la lógica de almacenamiento local.
-                        </p>
-                        <p>Sistema Web de Gestión de Inventario
-                            Rol: Backend Developer | Tecnologías: PHP, MySQL
-                            Descripción: Proyecto académico que permite registrar productos, controlar stock y generar
-                            reportes. Implementé las funciones CRUD y la conexión a base de datos.
-                        </p>
+                                Rol: Programadora Fullstack | Tecnologías: Java, SQLite, Android Studio
+                                Descripción: Creación de una app móvil para registrar tareas, fechas de exámenes y
+                                recordatorios. Implementé la interfaz y la lógica de almacenamiento local.
+                            </p>
+                            <p>Sistema Web de Gestión de Inventario
+                                Rol: Backend Developer | Tecnologías: PHP, MySQL
+                                Descripción: Proyecto académico que permite registrar productos, controlar stock y
+                                generar
+                                reportes. Implementé las funciones CRUD y la conexión a base de datos.
+                            </p>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="dato">
                             <p>Proyecto académico: Sistema de reservas para eventos
-                            Rol: Desarrolladora Backend | Tecnologías: PHP, MySQL
-                            Descripción: Implementé funcionalidades para la gestión de reservas, validación de datos y
-                            conexión con base de datos.
+                                Rol: Desarrolladora Backend | Tecnologías: PHP, MySQL
+                                Descripción: Implementé funcionalidades para la gestión de reservas, validación de datos
+                                y
+                                conexión con base de datos.
+                            </p>
+                            <p>
+                                Diseño de Prototipos para App de Turismo “Aventura Go”
+                                Rol: Diseñadora UX/UI | Herramientas: Figma, Canva
+                                Descripción: Desarrollo de prototipos de baja y alta fidelidad para una aplicación de
+                                reservas turísticas. Aplicación de principios de diseño centrado en el usuario
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="hobbies">
+            <div class="circle circle-top"></div>
+            <div class="circle circle-bottom"></div>
+
+            <div class="container">
+                <h1>Hobbies y Redes Sociales</h1>
+                <div class="row">
+                    <div class="col-md-6">
+                        <h2>Hobbies</h2>
+                        <p>Lectura: Me apasiona leer novelas de drama, romance y misterio. La lectura me permite
+                            desconectarme, explorar diferentes historias y estimular la imaginación.
+                            <br>
+                            Manualidades: Disfruto crear objetos decorativos, pintar y realizar proyectos creativos con
+                            mis manos, lo cual me ayuda a desarrollar la paciencia y la precisión.
+                            <br>
+                            Música: Escuchar música es parte esencial de mi rutina diaria. Me acompaña mientras estudio
+                            o programo, y me ayuda a relajarme y concentrarme.
                         </p>
-                        <p>
-                            Diseño de Prototipos para App de Turismo “Aventura Go”
-                            Rol: Diseñadora UX/UI | Herramientas: Figma, Canva
-                            Descripción: Desarrollo de prototipos de baja y alta fidelidad para una aplicación de
-                            reservas turísticas. Aplicación de principios de diseño centrado en el usuario
-                        </p>
+                    </div>
+                    <div class="col-md-6 redes">
+                        <h2>Redes Sociales</h2>
+                        <div class="redes-icons">
+                            <a href="https://github.com/" target="_blank"><img src="img/github (1).png"
+                                alt="GitHub"></a>
+                            <a href="https://linkedin.com/" target="_blank"><img src="img/logotipo-de-linkedin (1).png"
+                                alt="LinkedIn"></a>
+                            <a href="https://wa.me/xxxx" target="_blank"><img src="img/whatsapp (2).png"
+                                alt="WhatsApp"></a>
                         </div>
                     </div>
                 </div>
