Realice el Footer mas los estilos

--- a/index.html
+++ b/index.html
@@ -341,11 +341,11 @@
                         <h2>Redes Sociales</h2>
                         <div class="redes-icons">
                             <a href="https://github.com/" target="_blank"><img src="img/github (1).png"
-                                alt="GitHub"></a>
+                                    alt="GitHub"></a>
                             <a href="https://linkedin.com/" target="_blank"><img src="img/logotipo-de-linkedin (1).png"
-                                alt="LinkedIn"></a>
+                                    alt="LinkedIn"></a>
                             <a href="https://wa.me/xxxx" target="_blank"><img src="img/whatsapp (2).png"
-                                alt="WhatsApp"></a>
+                                    alt="WhatsApp"></a>
                         </div>
                     </div>
                 </div>
@@ -353,6 +353,25 @@
         </section>
 
     </main>
+
+    <footer>
+        <div class="container">
+            <div class="contact-item">
+                <img src="img/llamar (1).png" alt="Teléfono">
+                <span>3223733675</span>
+            </div>
+
+            <div class="contact-item">
+                <img src="img/github (1).png" alt="GitHub">
+                <a href="https://github.com/juana0504" target="_blank">github.com/juana0504</a>
+            </div>
+
+            <div class="contact-item">
+                <img src="img/logotipo-de-linkedin (1).png" alt="LinkedIn">
+                <a href="https://linkedin.com/in/juana-valentina" target="_blank">linkedin.com/in/juana-valentina</a>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
