--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
                     <ul class="navbar-nav mx-auto">
                         <li class="nav-item"><a class="nav-link active" href="#hero">Inicio</a></li>
                         <li class="nav-item"><a class="nav-link" href="#perfil">Perfil</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Estudios</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Experiencia</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">Hobbies</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#estudios">Estudios</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#experiencia">Experiencia</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#hobbies">Hobbies</a></li>
                     </ul>
                 </div>
 
-                <a id="contacto" href="#">Contacto</a>
+                <a id="contacto" href="https://wa.link/0ixtm9">Contacto</a>
             </div>
         </nav>
 
