--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portafolio</title>
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
@@ -15,6 +15,7 @@
     <!-- Slick JS -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="img/cv-en-linea.png" type="image/x-icon">
 </head>
 
 <body>
@@ -46,7 +47,6 @@
         <section id="hero">
 
             <div class="circle circle-top"></div>
-            <div class="circle circle-bottom"></div>
 
             <div class="container">
                 <div class="row">
@@ -78,13 +78,12 @@
 
         <section id="perfil">
 
-            <div class="circle circle-top"></div>
             <div class="circle circle-bottom"></div>
 
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 fot">
-                        <img src="img/Background.png" alt="Persona" class="foto" width="70%">
+                        <img src="img/Background.png" alt="Persona" class="foto">
                         <div class="imagen"></div>
                     </div>
                     <div class="col-md-6 datos">
@@ -102,8 +101,7 @@
 
         <section id="habilidades">
 
-            <div class="circle circle-top"></div>
-            <div class="circle circle-bottom"></div>
+            
 
             <div class="container">
 
@@ -196,7 +194,6 @@
 
         <section id="portafolio">
             <div class="circle circle-top"></div>
-            <div class="circle circle-bottom"></div>
 
             <div class="container text-center">
                 <h1>Portafolio</h1>
@@ -243,7 +240,6 @@
 
         <section id="estudios">
 
-            <div class="circle circle-top"></div>
             <div class="circle circle-bottom"></div>
 
             <div class="container">
@@ -277,8 +273,7 @@
         </section>
 
         <section id="experiencia">
-            <div class="circle circle-top"></div>
-            <div class="circle circle-bottom"></div>
+            
 
             <div class="container">
                 <h1>Experiencia</h1>
@@ -319,8 +314,8 @@
         </section>
 
         <section id="hobbies">
+
             <div class="circle circle-top"></div>
-            <div class="circle circle-bottom"></div>
 
             <div class="container">
                 <h1>Hobbies y Redes Sociales</h1>
