Se hicieron unos pequeños cambios con las tarjetas de las habilidades y el responsive

--- a/index.html
+++ b/index.html
@@ -13,12 +13,6 @@
 </head>
 
 <body>
-
-    <div id="loader" class="loader-wrapper">
-        <div class="loader"></div>
-        <p>Cargando...</p>
-    </div>
-
     <button id="scrollToTop" class="scroll-to-top">↑</button>
 
     <header>
@@ -109,7 +103,7 @@
                             <p>Interactividad y funcionalidades dinámicas.</p>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-6 tarjeta" data-aos="fade-up">
+                    <div class="col-lg-4 col-md-6 tarjeta extra oculto" data-aos="fade-up">
                         <div class="skill-card">
                             <div class="skill-icon"><img src="img/figma (1).png" alt="Figma" width="50"></div>
                             <h3>Figma</h3>
@@ -170,6 +164,21 @@
                         <div class="carousel-item">
                             <a href="https://juana0504.github.io/base-vehiculos-dinamicos/" target="_blank">
                                 <img src="img/Carrusel 4.png" class="d-block mx-auto w-50" alt="Proyecto 4">
+                            </a>
+                        </div>
+                        <div class="carousel-item">
+                            <a href="https://juana0504.github.io/base_figura_DOM/" target="_blank">
+                                <img src="img/Carrusel 5.png" class="d-block mx-auto w-50" alt="Proyecto 3">
+                            </a>
+                        </div>
+                        <div class="carousel-item">
+                            <a href="https://juana0504.github.io/base-vehiculos-dinamicos/" target="_blank">
+                                <img src="img/Carrusel 6.png" class="d-block mx-auto w-50" alt="Proyecto 4">
+                            </a>
+                        </div>
+                        <div class="carousel-item">
+                            <a href="https://juana0504.github.io/base-vehiculos-dinamicos/" target="_blank">
+                                <img src="img/Carrusel 7.png" class="d-block mx-auto w-50" alt="Proyecto 4">
                             </a>
                         </div>
                     </div>
